--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -1,7 +1,7 @@
 // $primary-color:#02407e;
 // $secondary-color:#FF9933;
 $primary-color:#008dff;
-$secondary-color:#12086f;
+$secondary-color:#FFD700;
 $light-color:#fff;
 $back-color:#F5F7FA;
 $gray-text:#999999;
