--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -624,7 +624,9 @@ i {
   position: fixed;
   width: 100%;
   top: 0;
-  z-index: 99999; }
+  z-index: 99999;
+  -webkit-animation: slide-in-fwd-top 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-in-fwd-top 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
 
 /* Search Area Style
 ==================== */
@@ -706,7 +708,8 @@ i {
     width: 100%;
     overflow: hidden; }
     .search-area .Fast-Search p {
-      padding: 10px 0; }
+      color: #0064ff;
+      text-align: center; }
     .search-area .Fast-Search ul {
       list-style: none;
       overflow: hidden;
