--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -706,7 +706,8 @@ i {
     top: 65px;
     left: 0;
     width: 100%;
-    overflow: hidden; }
+    max-height: 300px;
+    overflow-y: auto; }
     .search-area .Fast-Search p {
       color: #0064ff;
       text-align: center; }
@@ -717,7 +718,10 @@ i {
       .search-area .Fast-Search ul a {
         color: #008dff;
         text-decoration: none;
-        display: block; }
+        display: inline-flex;
+        align-items: center; }
+        .search-area .Fast-Search ul a span {
+          line-height: 20px; }
       .search-area .Fast-Search ul li {
         padding: 10px 20px;
         border-bottom: 1px solid #f1f1f1;
@@ -1125,6 +1129,30 @@ i {
     height: 11px;
     border-radius: 50%; }
 
+.tooltiptext:after {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background: #444;
+  border-radius: 8px;
+  color: #fff;
+  content: attr(title);
+  margin: -82px auto 0;
+  font-size: 16px;
+  padding: 13px;
+  width: 220px; }
+
+.tooltiptext:before {
+  border: solid;
+  border-color: #444 transparent;
+  border-width: 12px 6px 0 6px;
+  content: "";
+  left: 45%;
+  bottom: 30px;
+  position: absolute; }
+
+/* Show the tooltip text when you mouse over the tooltip container */
 .toggle--daynight .toggle--btn {
   border: 5px solid #181818;
   background-color: #0F0F0F; }
@@ -1246,7 +1274,7 @@ i {
   .Single-Series .chat-video,
   .episode .chat-video {
     bottom: 7rem;
-    right: 2.2rem; }
+    right: 12.5%; }
     .Single-Movie .chat-video .mine .message.last:after,
     .Single-Series .chat-video .mine .message.last:after,
     .episode .chat-video .mine .message.last:after {
@@ -1484,7 +1512,10 @@ i {
   .episode .player-mov {
     margin: 30px 20px;
     border-top: 4px solid #008dff;
-    border-radius: 22px; }
+    border-radius: 22px;
+    max-height: 550px;
+    max-width: 80%;
+    margin: 2rem auto; }
   .Single-Movie .player-trailer,
   .Single-Series .player-trailer,
   .episode .player-trailer {
@@ -1617,8 +1648,7 @@ i {
       height: 700px;
       background-repeat: no-repeat;
       width: 100%;
-      background-size: cover;
-      background-position: center center;
+      background-position: bottom;
       overflow: hidden;
       position: relative;
       margin: 0 auto; }
@@ -1745,6 +1775,58 @@ i {
     height: 20px;
     background: #eaeaea;
     border-bottom-left-radius: 10px; }
+
+/* == Messages === */
+.chat2 {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 30px;
+  left: 10px;
+  z-index: 99999; }
+  .chat2 .messages {
+    display: flex; }
+  .chat2 .message {
+    border-radius: 20px;
+    padding: 1rem 1rem;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: inline-block; }
+    .chat2 .message p {
+      display: block;
+      margin-bottom: 10px; }
+  .chat2 .mine {
+    align-items: flex-end; }
+  .chat2 .mine .message {
+    color: white;
+    background-image: radial-gradient(circle farthest-corner at 10% 20%, #2b0477 0%, #0369cf 91%);
+    background-attachment: fixed;
+    position: relative; }
+  .chat2 .mine .message.last:before {
+    content: "";
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: -8px;
+    height: 20px;
+    width: 20px;
+    background-image: radial-gradient(circle farthest-corner at 10% 20%, #2b0477 0%, #0369cf 91%);
+    background-attachment: fixed;
+    border-bottom-left-radius: 15px; }
+  .chat2 .mine .message.last:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: -10px;
+    width: 10px;
+    height: 20px;
+    background: #eaeaea;
+    border-bottom-left-radius: 10px; }
+
+.fixed .chat {
+  top: 36rem; }
 
 /* ======== Dark Mode Style ========*/
 .darkMod {
@@ -2044,12 +2126,15 @@ i {
     display: block; }
 
   .Single-Movie .watch-list button, .Single-Series .watch-list button, .episode .watch-list button {
-    padding: 8px 20px; }
+    padding: 8px 2px; }
 
   #download {
     width: 100%; } }
 /* === Pages === */
 @media (min-width: 225px) and (max-width: 576px) {
+  .player-mov {
+    width: 100%; }
+
   .Single-Movie, .Single-Series, .episode {
     margin: 20px !important; }
     .Single-Movie .container, .Single-Series .container, .episode .container {
@@ -2062,8 +2147,6 @@ i {
       max-width: 100px !important; }
     .Single-Movie .movie-information .information-list li i, .Single-Series .movie-information .information-list li i, .episode .movie-information .information-list li i {
       margin: 0; }
-    .Single-Movie .player-mov, .Single-Series .player-mov, .episode .player-mov {
-      margin: 30px 0 !important; }
 
   .movies-genre {
     margin: 50px 15px; }
