--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -81,6 +81,7 @@ i {
 .loading-icon {
     display: flex;
 }
+
 .note {
     box-shadow: 0px 0px 4px 0px #d8d8d8;
     margin: 1rem;
@@ -377,11 +378,12 @@ i {
         top: 65px;
         left: 0;
         width: 100%;
-        overflow: hidden;
+        max-height: 300px;
+        overflow-y: auto;
 
         p {
             color: #0064ff;
-text-align: center;
+            text-align: center;
         }
 
         ul {
@@ -392,7 +394,12 @@ text-align: center;
             a {
                 color: $primary-color;
                 text-decoration: none;
-                display: block;
+                display: inline-flex;
+                align-items: center;
+
+                span {
+                    line-height: 20px;
+                }
             }
 
             li {
@@ -712,17 +719,20 @@ text-align: center;
     background-color: #fff;
     z-index: 9999;
     position: relative;
-    .drob{
-    display: none;
-    text-align: left;
-    line-height: 46px;
-    position: absolute;
-    left: 3rem;
-        svg{
-            height:20px;
-            fill:#fff;
+
+    .drob {
+        display: none;
+        text-align: left;
+        line-height: 46px;
+        position: absolute;
+        left: 3rem;
+
+        svg {
+            height: 20px;
+            fill: #fff;
         }
     }
+
     .back-color {
         background-image: linear-gradient(109.6deg, #4148cf 21.2%, #5061d8 73.1%);
         border-radius: 20px 20px 0 0;
@@ -779,7 +789,8 @@ text-align: center;
                 outline: none;
             }
         }
-        svg{
+
+        svg {
             fill: #fff;
             height: 20px;
             margin-left: 10px;
@@ -790,7 +801,8 @@ text-align: center;
         .active {
             color: $secondary-color;
             font-weight: bold;
-            svg{
+
+            svg {
                 fill: $secondary-color;
             }
         }
@@ -801,7 +813,8 @@ text-align: center;
             padding: 0;
             text-align: center;
             margin-right: -9rem;
-            font-size:16px;
+            font-size: 16px;
+
             li {
                 display: inline-block;
                 padding: 10px 20px;
@@ -915,6 +928,33 @@ $cloud-bgColor: #fff;
         }
     }
 }
+
+.tooltiptext:after {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    background: #444;
+    border-radius: 8px;
+    color: #fff;
+    content: attr(title);
+    margin: -82px auto 0;
+    font-size: 16px;
+    padding: 13px;
+    width: 220px;
+}
+
+.tooltiptext:before {
+    border: solid;
+    border-color: #444 transparent;
+    border-width: 12px 6px 0 6px;
+    content: "";
+    left: 45%;
+    bottom: 30px;
+    position: absolute;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
 
 .toggle--daynight {
     .toggle--btn {
@@ -1124,7 +1164,7 @@ $cloud-bgColor: #fff;
 
     .chat-video {
         bottom: 7rem;
-        right: 2.2rem;
+        right: 12.5%;
 
         .mine .message.last:after {
             background: #000;
@@ -1335,6 +1375,9 @@ $cloud-bgColor: #fff;
         margin: 30px 20px;
         border-top: 4px solid $primary-color;
         border-radius: 22px;
+        max-height: 550px;
+    max-width: 80%;
+    margin: 2rem auto;
     }
 
     .player-trailer {
@@ -1343,12 +1386,12 @@ $cloud-bgColor: #fff;
         border-radius: 22px;
         overflow: hidden;
         border-top: 4px solid #008dff;
-            border-radius: 22px;
-            overflow: hidden;
-            width: 90%;
-            min-height: 600px;
-            margin: 2rem auto;
-            display: block;
+        border-radius: 22px;
+        overflow: hidden;
+        width: 90%;
+        min-height: 600px;
+        margin: 2rem auto;
+        display: block;
     }
 }
 
@@ -1412,6 +1455,7 @@ $cloud-bgColor: #fff;
     margin: 50px;
     border-radius: 10px 10px 0 0;
     background-color: #fff;
+
     .container-fluid {
         padding: 0;
     }
@@ -1508,8 +1552,7 @@ $cloud-bgColor: #fff;
             height: 700px;
             background-repeat: no-repeat;
             width: 100%;
-            background-size: cover;
-            background-position: center center;
+            background-position: bottom;
             overflow: hidden;
             position: relative;
             margin: 0 auto;
@@ -1679,4 +1722,71 @@ $cloud-bgColor: #fff;
         background: #eaeaea;
         border-bottom-left-radius: 10px;
     }
+}
+/* == Messages === */
+.chat2 {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 30px;
+    left: 10px;
+    z-index: 99999;
+    .messages {
+        display: flex;
+    }
+
+    .message {
+        border-radius: 20px;
+        padding: 1rem 1rem;
+        text-align: center;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        display: inline-block;
+
+        p {
+            display: block;
+            margin-bottom: 10px;
+        }
+    }
+
+    .mine {
+        align-items: flex-end;
+    }
+
+    .mine .message {
+        color: white;
+        background-image: radial-gradient(circle farthest-corner at 10% 20%, #2b0477 0%, #0369cf 91%);
+        background-attachment: fixed;
+        position: relative;
+    }
+
+    .mine .message.last:before {
+        content: "";
+        position: absolute;
+        z-index: 0;
+        top: 0;
+        left: -8px;
+        height: 20px;
+        width: 20px;
+        background-image: radial-gradient(circle farthest-corner at 10% 20%, #2b0477 0%, #0369cf 91%);
+        background-attachment: fixed;
+        border-bottom-left-radius: 15px;
+    }
+
+    .mine .message.last:after {
+        content: "";
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        left: -10px;
+        width: 10px;
+        height: 20px;
+        background: #eaeaea;
+        border-bottom-left-radius: 10px;
+    }
+}
+
+
+.fixed .chat {
+    top: 36rem;
 }
