--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -1156,6 +1156,7 @@ $cloud-bgColor: #fff;
         width: 100%;
         border-radius: 20px;
         object-fit: cover;
+        max-height:550px
     }
 
     .same-movies {
